# jenkins-ibvc-plugin

./: .classpath  CMakeLists.txt  LICENSE  README.md  pom.xml
src/main/java/jenkins/plugins/Ibvc/: IbvcBuildWrapper.java  IbvcNodeProperties.java  IbvcParameter.java  IbvcPostBuildSave.java  IbvcSCMPlugin.java  Util.java
src/main/resources/: index.jelly
src/main/resources/jenkins/plugins/Ibvc/: Messages.properties
src/main/resources/jenkins/plugins/Ibvc/IbvcBuildWrapper/: config.jelly  config_en.properties  help-addiotinalArguments.html  help-ibvcCleanCheckout.html  help-ibvcConfig.html  help-parameters.html  help-sfvcRevision.html  help.html
src/main/resources/jenkins/plugins/Ibvc/IbvcNodeProperties/: config.jelly  help-home.html  help-license.html
src/main/resources/jenkins/plugins/Ibvc/IbvcParameter/: config.jelly  config_en.properties
src/main/resources/jenkins/plugins/Ibvc/IbvcPostBuildSave/: config.jelly  config_en.properties  help-addiotinalArguments.html  help-ibvcConfig.html  help-keep.html  help-overrideIbvcScmConfig.html  help-parameters.html  help-purgeOther.html  help-runAsync.html  help-sfvcRevision.html
src/main/resources/jenkins/plugins/Ibvc/IbvcSCMPlugin/: config.jelly  config_en.properties  help-ibvcConfig.html  help-parameters.html  help-sfvcRevision.html
